commit for binder

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# xtensor-io\n",
+    "\n",
+    "Effortless loading of images, audio files and NumPy npz files!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
