--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -4,9 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# xtensor-io\n",
+    "# ![xtensor-io](images/xtensor-io.png)\n",
     "\n",
-    "Effortless loading of images, audio files and NumPy npz files!"
+    "<center>Effortless loading of images, audio files and NumPy npz files!</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Usage\n",
+    "\n",
+    "<div style=\"background: #efffed;\n",
+    "            border: 1px solid grey;\n",
+    "            margin: 8px 0 8px 0;\n",
+    "            text-align: center;\n",
+    "            padding: 8px; \">\n",
+    "    <i class=\"fa-play fa\" \n",
+    "       style=\"font-size: 40px;\n",
+    "              line-height: 40px;\n",
+    "              margin: 8px;\n",
+    "              color: #444;\">\n",
+    "    </i>\n",
+    "    <div>\n",
+    "    To run the selected code cell, hit <pre style=\"background: #efffed\">Shift + Enter</pre>\n",
+    "    </div>\n",
+    "</div>"
    ]
   },
   {
