Fix example notebook

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -53,7 +53,9 @@
     "\n",
     "#include \"xtl/xbase64.hpp\"\n",
     "\n",
-    "#include \"xcpp/xdisplay.hpp\""
+    "#include \"xcpp/xdisplay.hpp\"\n",
+    "\n",
+    "namespace nl = nlohmann;"
    ]
   },
   {
@@ -109,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xw::image ls_image;\n",
+    "auto ls_image = xw::image()\n",
     "ls_image.value = to_png_buffer(lightsaber);\n",
     "ls_image"
    ]
@@ -200,17 +202,17 @@
     "    std::stringstream buffer;\n",
     "    buffer << fin.rdbuf();\n",
     "\n",
-    "    xeus::xjson mime;\n",
+    "    nl::json mime;\n",
     "    mime[\"text/html\"] = std::string(\"<audio autoplay controls loop src=\\\"data:audio/wav;base64,\") + \n",
     "                        xtl::base64encode(buffer.str()) + \"\\\"/>\";\n",
-    "    xeus::xjson transient;\n",
+    "    nl::json transient;\n",
     "\n",
     "    if (update)\n",
     "    {\n",
     "        transient[\"display_id\"] = id;\n",
     "        xeus::get_interpreter().update_display_data(\n",
     "            std::move(mime),\n",
-    "            xeus::xjson::object(),\n",
+    "            nl::json::object(),\n",
     "            std::move(transient));\n",
     "        return id;\n",
     "    }\n",
@@ -220,7 +222,7 @@
     "        transient[\"display_id\"] = id;\n",
     "        xeus::get_interpreter().display_data(\n",
     "            std::move(mime),\n",
-    "            xeus::xjson::object(),\n",
+    "            nl::json::object(),\n",
     "            std::move(transient));\n",
     "        return id;\n",
     "    }\n",
@@ -265,7 +267,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
