Upgrade to latest xwidgets to fix binder

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "auto ls_image = xw::image()\n",
+    "auto ls_image = xw::image();\n",
     "ls_image.value = to_png_buffer(lightsaber);\n",
     "ls_image"
    ]
